# devmates

./: Cargo.toml  hello-vinko
src/: task_2019_08_16.rs  task_2019_08_19.rs  task_2019_08_20.rs  task_2019_08_21.rs  task_2019_08_22.rs  task_2019_08_23.rs  task_2019_08_26.rs  task_2019_08_27.rs  task_2019_08_28.rs  task_2019_08_29.rs  task_2019_08_30.rs  task_2019_09_02.rs  task_2019_09_03.rs  task_2019_09_04.rs  task_2019_09_05.rs  task_2019_09_06.rs  task_2019_09_09.rs  task_2019_09_10.rs  task_2019_09_11.rs  task_2019_09_13.rs  task_2019_09_16.rs  task_2019_09_17.rs  task_2019_09_19.rs
