[package]
name = "devmates_tasks"
version = "0.1.0"
authors = ["Vinko Kašljević <vinko.kasljevic@fer.hr>"]
edition = "2018"

[[bin]]
name = "task_2019_08_16"
path = "src/task_2019_08_16.rs"

[[bin]]
name = "task_2019_08_19"
path = "src/task_2019_08_19.rs"

[[bin]]
name = "task_2019_08_20"
path = "src/task_2019_08_20.rs"

[[bin]]
name = "task_2019_08_21"
path = "src/task_2019_08_21.rs"

[dependencies]
