[package]
name = "devmates_tasks"
version = "0.1.0"
authors = ["Vinko Kašljević <vinko.kasljevic@fer.hr>"]
edition = "2018"

[[bin]]
name = "task_2019_08_16"
path = "src/task_2019_08_16.rs"

[[bin]]
name = "task_2019_08_19"
path = "src/task_2019_08_19.rs"

[[bin]]
name = "task_2019_08_20"
path = "src/task_2019_08_20.rs"

[[bin]]
name = "task_2019_08_21"
path = "src/task_2019_08_21.rs"

[[bin]]
name = "task_2019_08_22"
path = "src/task_2019_08_22.rs"

[[bin]]
name = "task_2019_08_23"
path = "src/task_2019_08_23.rs"

[[bin]]
name = "task_2019_08_26"
path = "src/task_2019_08_26.rs"

[[bin]]
name = "task_2019_08_27"
path = "src/task_2019_08_27.rs"

[[bin]]
name = "task_2019_08_28"
path = "src/task_2019_08_28.rs"

[[bin]]
name = "task_2019_08_29"
path = "src/task_2019_08_29.rs"

[[bin]]
name = "task_2019_08_30"
path = "src/task_2019_08_30.rs"

[dependencies]
