[package]
name = "devmates_tasks"
version = "0.1.0"
authors = ["Vinko Kašljević <vinko.kasljevic@fer.hr>"]
edition = "2018"

[[bin]]
name = "task_2019_08_16"
path = "src/task_2019_08_16.rs"

[[bin]]
name = "task_2019_08_19"
path = "src/task_2019_08_19.rs"

[[bin]]
name = "task_2019_08_20"
path = "src/task_2019_08_20.rs"

[[bin]]
name = "task_2019_08_21"
path = "src/task_2019_08_21.rs"

[[bin]]
name = "task_2019_08_22"
path = "src/task_2019_08_22.rs"

[[bin]]
name = "task_2019_08_23"
path = "src/task_2019_08_23.rs"

[[bin]]
name = "task_2019_08_26"
path = "src/task_2019_08_26.rs"

[[bin]]
name = "task_2019_08_27"
path = "src/task_2019_08_27.rs"

[[bin]]
name = "task_2019_08_28"
path = "src/task_2019_08_28.rs"

[[bin]]
name = "task_2019_08_29"
path = "src/task_2019_08_29.rs"

[[bin]]
name = "task_2019_08_30"
path = "src/task_2019_08_30.rs"

[[bin]]
name = "task_2019_09_02"
path = "src/task_2019_09_02.rs"

[[bin]]
name = "task_2019_09_03"
path = "src/task_2019_09_03.rs"

[[bin]]
name = "task_2019_09_04"
path = "src/task_2019_09_04.rs"

[[bin]]
name = "task_2019_09_05"
path = "src/task_2019_09_05.rs"

[[bin]]
name = "task_2019_09_06"
path = "src/task_2019_09_06.rs"

[[bin]]
name = "task_2019_09_09"
path = "src/task_2019_09_09.rs"

[[bin]]
name = "task_2019_09_10"
path = "src/task_2019_09_10.rs"

[[bin]]
name = "task_2019_09_11"
path = "src/task_2019_09_11.rs"

[[bin]]
name = "task_2019_09_13"
path = "src/task_2019_09_13.rs"

[dependencies]
